// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stripe-sheet Rendering test should match snapshot (open='true') 1`] = `
<stripe-sheet open="true">
  <template shadowrootmode="open">
    <div class="modal-row open">
      <div class="modal-child">
        <div class="modal-close-button-wrap">
          <ion-icon class="modal-close-button" name="close" size="large"></ion-icon>
        </div>
        <slot></slot>
      </div>
    </div>
  </template>
</stripe-sheet>
`;

exports[`stripe-sheet Rendering test should match snapshot (showCloseButton='false') 1`] = `
<stripe-sheet show-close-button="false">
  <template shadowrootmode="open">
    <div class="modal-row">
      <div class="modal-child">
        <slot></slot>
      </div>
    </div>
  </template>
</stripe-sheet>
`;

exports[`stripe-sheet Rendering test should match snapshot (showCloseButton='true') 1`] = `
<stripe-sheet show-close-button="true">
  <template shadowrootmode="open">
    <div class="modal-row">
      <div class="modal-child">
        <div class="modal-close-button-wrap">
          <ion-icon class="modal-close-button" name="close" size="large"></ion-icon>
        </div>
        <slot></slot>
      </div>
    </div>
  </template>
</stripe-sheet>
`;
